Fix issue with collapsed accordion nav scrolling

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -292,6 +292,7 @@
     &[aria-expanded='false'] {
       height: 0;
       opacity: 0;
+      overflow: hidden;
       transform: translate3d(0, -0.5rem, 0);
       visibility: hidden;
     }
